支持可视化修改